Define the C API for TIP 164

--- a/tip/164.md
+++ b/tip/164.md
@@ -20,46 +20,78 @@ possible with scaling and moving.
 
 # Rationale
 
-The canvas currently allows a programmer to scale and move items, but
-the third common affine transformation, rotation, is not supported.
-This can in itself be simulated by a script \(simply get the
-coordinates of all items involved, transform them and set the new
-coordinates\), but if you have several hundreds or even thousands of
-items this gets very slow.
+The canvas currently allows a programmer to scale and move items, but the
+third common affine transformation, rotation, is not supported.  This can in
+itself be simulated by a script \(simply get the coordinates of all items
+involved, transform them and set the new coordinates\), but if you have
+several hundreds or even thousands of items this gets very slow.
 
-Rotation is easy for polygons and lines: simply transform the
-coordinates.  For circles and circular arcs new bounding boxes must be
-calculated and in addition for arcs the starting angle must be
-changed.
+Rotation is easy for polygons and lines: simply transform the coordinates.
 
-Implementing rotation should consider what to do with items that can
-not \(easily\) be rotated: text items, rectangles, non-circular ovals
-and arcs, widgets and images.  Currently, text can not be drawn at an
-arbitrary angle, so I propose to only transform the coordinates at
-which the text is "anchored".  A similar strategy can be used for
-widgets and images.
+Implementing rotation should consider what to do with items that can not
+\(easily\) be rotated: rectangles, non-circular ovals and arcs, widgets,
+bitmaps and images. For the items that only define a single coordinate, the
+anchor point, we just transform that anchor point. (It would require major
+work to Tk's rendering engine to allow rotated embedded images, and rotated
+windows would be even more complex than that.)
 
 For rectangles and general ovals and arcs there are two choices:
 
- * Transforming the item into a polygon would solve the definition
-   problem \(these items are defined by a bounding box and the
-   orientation is implicitly assumed\), but might break scripts that
-   look for a particular type of item.
+ * Transforming the item into a polygon would solve the definition problem
+   \(these items are defined by a bounding box and the orientation is
+   implicitly assumed\), but might break scripts that look for a particular
+   type of item. This is best left to user code.
 
- * Therefore we will simply calculate a new bounding box and _ignore
-   changes in orientation_.
+ * Therefore we will simply calculate a new bounding box and _ignore changes
+   in orientation_. However, this cannot be done by just applying the general
+   rotation transformation to the bounding box definition coordinates because
+   this radically transforms the shape of the item, in some cases in ways that
+   are highly surprising.  Instead, we compute a virtual anchor point for the
+   item (arbitrarily chosen to be its center), rotate that about the origin
+   point, and then update the item bounding box to be the same shape as before
+   in the same orientation as before but now centered on the new virtual
+   anchor point.
+
+Text items can be rotated, but they are often used with rectangles to make
+labelled boxes so the rotation of them with respect to their anchor is left
+for user code. Similarly, arc items have angles associated with them for where
+they start and end, but it isn't clear how those should be rotated when the
+item itself cannot be rotated (since we don't allow choosing angles for the
+major and minor axes of the underlying ellipse). Circular arcs could be
+handled simply, but we do not detect that case.
 
 # Proposal
 
 Canvases will have a new subcommand, **rotate**, which will rotate the coordinates of chosen items by a specified angle about a specified point.
 
- > _canvas_ **rotate** _itemOrTag_ _x_ _y_ _angle_
+ > _canvas_ **rotate** _itemOrTag x y angle_
 
-Note that most of the arguments are very similar to the canvas's **scale** subcommand.  _Angle_ is measured in degrees, with positive values indicating anti-clockwise rotation.
+Note that most of the arguments are very similar to the canvas's **scale**
+subcommand.  The _angle_ is measured in degrees, with positive values
+indicating anti-clockwise rotation.
 
 ## Canvas Item C API Alterations
 
-[These are required for this TIP, but are not yet done.]
+The `Tk_ItemType` structure gains a new field, `Tk_ItemRotateProc
+*rotateProc`, which comes after the `nextPtr` field. This field allows the
+creator of the item type to define a callback that handles rotation; if
+defined as `NULL`, which it is by default in most existing code, then the
+default rotation algorithm is applied, which simply rotates the coordinate
+list using the `coordProc`.
+
+The definition of `Tk_ItemRotateProc` is:
+
+    typedef void (Tk_ItemRotateProc)(
+        Tk_Canvas canvas,
+        Tk_Item *itemPtr,
+        double originX,
+        double originY,
+        double angleRadians);
+
+The `canvas` and `itemPtr` are the usual arguments for these item
+callbacks. The `originX` and `originY` describe the point about which rotation
+is to be done. The `angleRadians` is the amount to rotate, _in radians_ (i.e.,
+suitable for directly using with `sin()` and `cos()`).
 
 # Reference Implementation
 
