TIP #535 accepted 4/0/0: YES: 4 (Griffin, Kenny, Landers, Vogel). NO: -. PRESENT: -. Vote conclusion email was sent 24-Mar-2019 to Tcl Core list.

--- a/tip/535.md
+++ b/tip/535.md
@@ -1,8 +1,8 @@
 # TIP 535: Remove trailing zeroes in scale ticks
 	Author:         Francois Vogel <fvogelnew1@free.fr>
-	State:          Voting
+	State:          Accepted
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        10-March-2019
 	Post-History:   
 	Keywords:       Tcl
