Update to TIP 160

--- a/tip/160.md
+++ b/tip/160.md
@@ -4,7 +4,7 @@
 	Tcl-Version:	8.7
 	Vote:		Pending
 	Post-History:	
-	Author:		Donal K. Fellows <donal.k.fellows@man.ac.uk>
+	Author:		Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
 	Created:	17-Oct-2003
 -----
 
@@ -12,7 +12,7 @@
 
 Terminals and other kinds of serial lines have other capabilities and
 requirements that are not currently controllable using Tcl.  This TIP
-adds new options to [fconfigure] to allow these advanced
+adds new options to **fconfigure** to allow these advanced
 capabilities to be supported within Tcl in a straight-forward way.
 
 # Serial Line Discard Control
@@ -28,18 +28,18 @@ to distinguish automatically between terminals that are having
 debugging information written to them and serial lines that were
 opened for data manipulation and where closing quickly is desirable
 \(you can't tell them apart even by device major/minor numbers due to
-the way that /dev/tty is aliased inside the kernel on many Unixes.\)
-This was even the subject of a subtle bug \(\#525783\) in [[35]](35.md).  But
+the way that `/dev/tty` is aliased inside the kernel on many Unixes.\)
+This was even the subject of a subtle bug \([\#525783](https://core.tcl-lang.org/tcl/tktview/525783ffffffffffffff)\) in [TIP 35](35.md).  But
 since it is still useful, having it controllable by an explicit option
 is useful.
 
 I propose a new option for serial channels on all platforms:
-_-closemode_.  This will have two legal values:
+**-closemode**.  This will have two legal values:
 
- drain: Closing the channel will result in a delay until the entire
+ * **drain**: Closing the channel will result in a delay until the entire
  contents of the OS buffers are written.  This is the current default.
 
- discard: Closing the channel will result in any data in the OS
+ * **discard**: Closing the channel will result in any data in the OS
  buffers to be thrown away.  This can result in data that is being
  written by other processes being lost.
 
@@ -73,30 +73,35 @@ preferable.  Example uses of raw input include text editors \(such as
 vi or emacs\) or terminal-based menu systems.
 
 I propose supporting these operation modes within Tcl through a single
-new option to the [fconfigure] command \(to definitely be implemented
+new option to the **fconfigure** command \(to definitely be implemented
 on Unix serial channels - because that is the type of stdin in a
 normal interactive session - and suitably on other platforms if
-possible\): _-inputmode_.  This will have three legal values:
+possible\): **-inputmode**.  This will have three legal values:
 
- normal: This will turn on both echoing and cooking of input, and can
+ **normal**: This will turn on both echoing and cooking of input, and can
  be considered to be the default configuration for all terminals.
 
- password: This will turn off echoing but leave cooking turned on.
+ **password**: This will turn off echoing but leave cooking turned on.
 
- raw: This will turn off both echoing and line-cooking.
+ **raw**: This will turn off both echoing and line-cooking.
 
 I'm not aware off-hand of any use-cases for echoed raw mode.  While
 there is theoretically a problem due to cross-talk between channels
 \(similar to that which was observed with the rationale for the
-_-closemode_ option\), it is practically unlikely to be one since
+**-closemode** option\), it is practically unlikely to be one since
 applications that take parsed input from several serial lines are very
 rare.
 
-Officially, the default value of the _-inputmode_ option will be
-system- and configuration-dependant, since users can use the _stty_
+Officially, the default value of the **-inputmode** option will be
+system- and configuration-dependant, since users can use the `stty`
 program to configure their terminals prior to calling Tcl.
+
+# Platform Portability
+
+This TIP does not guarantee support for any of these options on non-POSIX
+platforms (specifically including Windows), but it does authorize the support
+as documented on any platform where it is practical to do so.
 
 # Copyright
 
 This document has been placed in the public domain.
-
