More formatting tweaking of 160

--- a/tip/160.md
+++ b/tip/160.md
@@ -52,7 +52,7 @@ option will not be defined on serial channels.
 Terminals have a number of modes of operation.  Two of the most useful
 things that can be set relate to echoing and cooking.
 
-Echoing is fairly simple to understand.  If a terminal has echoing
+_Echoing_ is fairly simple to understand.  If a terminal has echoing
 turned on, every character read is written to the terminal
 automatically without any action from the program reading from the
 terminal.  Most of the time this is a good thing as people want to
@@ -63,7 +63,7 @@ single key-presses \(which is a case where neither echoing or cooking
 are desirable, with echoing being a problem because the key press is
 causing a different set of visible changes in the program's output.\)
 
-Cooking is also fairly simple.  A terminal is producing cooked input
+_Cooking_ is also fairly simple.  A terminal is producing cooked input
 when it is working in simply-editable line-at-a-time mode.  When the
 terminal isn't in cooked mode, it delivers raw input directly and
 immediately to the program.  Cooked input is the default and is useful
@@ -74,16 +74,16 @@ vi or emacs\) or terminal-based menu systems.
 
 I propose supporting these operation modes within Tcl through a single
 new option to the **fconfigure** command \(to definitely be implemented
-on Unix serial channels - because that is the type of stdin in a
-normal interactive session - and suitably on other platforms if
+on Unix serial channels — because that is the type of stdin in a
+normal interactive session — and suitably on other platforms if
 possible\): **-inputmode**.  This will have three legal values:
 
- **normal**: This will turn on both echoing and cooking of input, and can
+ * **normal**: This will turn on both echoing and cooking of input, and can
  be considered to be the default configuration for all terminals.
 
- **password**: This will turn off echoing but leave cooking turned on.
+ * **password**: This will turn off echoing but leave cooking turned on.
 
- **raw**: This will turn off both echoing and line-cooking.
+ * **raw**: This will turn off both echoing and line-cooking.
 
 I'm not aware off-hand of any use-cases for echoed raw mode.  While
 there is theoretically a problem due to cross-talk between channels
