There is now an implementation of TIP 160, even if it is still partial

--- a/tip/160.md
+++ b/tip/160.md
@@ -1,11 +1,12 @@
 # TIP 160: Improvements to Terminal and Serial Channel Handling
-	State:		Draft
-	Type:		Project
-	Tcl-Version:	8.7
-	Vote:		Pending
+	State:          Draft
+	Type:           Project
+	Tcl-Version:    8.7
+	Vote:           Pending
 	Post-History:	
-	Author:		Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
-	Created:	17-Oct-2003
+	Author:         Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
+	Created:        17-Oct-2003
+	Tcl-Branch:     tip-160
 -----
 
 # Abstract
