Changes based on implementation experience.

--- a/tip/160.md
+++ b/tip/160.md
@@ -35,14 +35,20 @@ since it is still useful, having it controllable by an explicit option
 is useful.
 
 I propose a new option for serial channels on all platforms:
-**-closemode**.  This will have two legal values:
+**-closemode**.  This will have three legal values:
+
+ * **default**: Any flushing or draining of the channel will be up to the OS
+   to perform; Tcl will not request anything special. This is the current
+   behavior; other behaviours will have to be explicitly selected.
 
  * **drain**: Closing the channel will result in a delay until the entire
- contents of the OS buffers are written.  This is the current default.
+   contents of the OS buffers are written.
 
- * **discard**: Closing the channel will result in any data in the OS
- buffers to be thrown away.  This can result in data that is being
- written by other processes being lost.
+ * **discard**: Closing the channel will result in any data in the OS buffers
+   to be thrown away.  This can result in data that is being written by other
+   processes being lost. This can result in data that is being written by
+   other channels being lost if the OS has chosen to unify its buffers for the
+   underlying file descriptors.
 
 This option will be supported on all platforms where the underlying
 serial API is sufficiently capable.  Where it is not supported, the
@@ -79,12 +85,19 @@ on Unix serial channels — because that is the type of stdin in a
 normal interactive session — and suitably on other platforms if
 possible\): **-inputmode**.  This will have three legal values:
 
- * **normal**: This will turn on both echoing and cooking of input, and can
- be considered to be the default configuration for all terminals.
+ * **normal**: This will turn on both echoing and cooking of input, and can be
+   considered to be the default configuration for all terminals.
 
- * **password**: This will turn off echoing but leave cooking turned on.
+ * **password**: This will turn off echoing but leave cooking turned on.  Note
+   that on at least one platform (macOS) this additionally changes the cursor
+   in the terminal.
 
- * **raw**: This will turn off both echoing and line-cooking.
+ * **raw**: This will turn off both echoing and line-cooking. Users may want
+   to also use the binary encoding when choosing this option.
+
+ * **reset**: This restores the channel to whatever configuration it was in
+   when it was opened. This is never reported when queried for; it is a
+   write-only value.
 
 I'm not aware off-hand of any use-cases for echoed raw mode.  While
 there is theoretically a problem due to cross-talk between channels
@@ -96,6 +109,10 @@ rare.
 Officially, the default value of the **-inputmode** option will be
 system- and configuration-dependant, since users can use the `stty`
 program to configure their terminals prior to calling Tcl.
+
+If the user changes the **-inputmode**, the mode that was present when the
+channel was opened will be restored when Tcl closes the channel, just as if
+the **reset** option is used.
 
 # Platform Portability
 
