Fix AppleScript command

--- a/tip/536.md
+++ b/tip/536.md
@@ -38,7 +38,7 @@ In the implementation of this TIP, these widgets have additional bindings on the
 
 ## ::tk::mac::LaunchURL *URL...*
 
-If defined, this command launches a URL within Tk in response to the specific `GURL/GURL` Apple Event being sent to the application. This would be used if a Tk application wants to handle a URL itself, such as displaying data from an RSS feed, rather than launching a default application to handle the URL, although it can defined as such. It will respond to the "open URL" AppleScript command. 
+If defined, this command launches a URL within Tk in response to the specific `GURL/GURL` Apple Event being sent to the application. This would be used if a Tk application wants to handle a URL itself, such as displaying data from an RSS feed, rather than launching a default application to handle the URL, although it can defined as such. It will respond to the "open location" AppleScript command. 
 
 ## ::tk::mac::GetAppPath
 
