Added -winsize option to 160

--- a/tip/160.md
+++ b/tip/160.md
@@ -11,7 +11,7 @@
 
 # Abstract
 
-Terminals and other kinds of serial lines have other capabilities and
+Terminals, consoles and other kinds of serial lines have other capabilities and
 requirements that are not currently controllable using Tcl.  This TIP
 adds new options to **fconfigure** to allow these advanced
 capabilities to be supported within Tcl in a straight-forward way.
@@ -56,8 +56,9 @@ option will not be defined on serial channels.
 
 # Echo and Cooking Control
 
-Terminals have a number of modes of operation.  Two of the most useful
-things that can be set relate to echoing and cooking.
+Terminals (on Unix) and consoles (on Windows) have a number of modes of
+operation.  Two of the most useful things that can be set relate to echoing
+and cooking.
 
 _Echoing_ is fairly simple to understand.  If a terminal has echoing
 turned on, every character read is written to the terminal
@@ -114,11 +115,22 @@ If the user changes the **-inputmode**, the mode that was present when the
 channel was opened will be restored when Tcl closes the channel, just as if
 the **reset** option is used.
 
+# Terminal Size
+
+It is common for terminals to be able to be of variable size. To accommodate
+this, terminals (on Unix) and consoles (on Windows) will gain a read-only
+**fconfigure** option, **-winsize**, that when read will return a two element
+list with the current width (first element) and height (second element) of the
+terminal/console.
+
 # Platform Portability
 
-This TIP does not guarantee support for any of these options on non-POSIX
-platforms (specifically including Windows), but it does authorize the support
-as documented on any platform where it is practical to do so.
+On Unix, terminals cover both serial lines and consoles, and so gain all
+options.
+
+On Windows, serial lines and consoles are separate channel types, so
+**-closemode** is only supported on serial lines, and **-inputmode** and
+**-winsize** are only supported on consoles.
 
 # Copyright
 
