--- a/tip/367.md
+++ b/tip/367.md
@@ -1,12 +1,13 @@
 # TIP 367: A Command to Remove Elements from a List
-	State:		Draft
-	Type:		Project
-	Tcl-Version:	8.7
-	Vote:		Pending
+	State:          Draft
+	Type:           Project
+	Tcl-Version:    8.7
+	Vote:           Pending
 	Post-History:	
-	Author:		Donal K. Fellows <dkf@users.sf.net>
-	Created:	18-May-2010
-	Keywords:	Tcl, delete, item
+	Author:         Donal K. Fellows <dkf@users.sf.net>
+	Created:        18-May-2010
+	Keywords:       Tcl, delete, item
+	Tcl-Branch:     tip-367
 -----
 
 # Abstract
@@ -65,7 +66,7 @@ then it will be as if it was only indicated once.
 
 # Implementation
 
-_Pending._
+See the `tip-367` branch.
 
 # Copyright
 
