Format fixing for 224

--- a/tip/224.md
+++ b/tip/224.md
@@ -12,17 +12,17 @@
 # Abstract
 
 The TIP proposes the addition to two new subcommands to the
-**array** command: **incr** and **value**.  The **incr_
+**array** command: **incr** and **value**.  The **incr**
 subcommand would increment an element in an array.  The **value**
 subcommand would query, reference, and/or initialize an array element.
 
 # Rationale
 
-[[215]](215.md) proposed modifying the **incr** command to auto-initialize
+[TIP 215](215.md) proposed modifying the **incr** command to auto-initialize
 variables which do not exist, rather than throwing an error.  After
 some debate, it was identified that frequency counting in arrays was
 the primary area of interest.  In particular, the excessive use of
-_if/info exists_ constructs in such code is inefficient, verbose and
+`if`/`info exists` constructs in such code is inefficient, verbose and
 rather difficult to read.  The addition of these two subcommands could
 substantially reduce the complexity of much Tcl code.
 
@@ -30,7 +30,7 @@ substantially reduce the complexity of much Tcl code.
 
 Two new subcommands will be added to **array**, being **incr** and
 **value**.
-Both commands take an array name and an elem parameter, but, no string match is performed on elem.
+Both commands take an array name (_var_) and an element name (_elem_) parameter; no string match is performed on _elem_.
 
 ## array incr
 
@@ -49,7 +49,7 @@ double values \(based on the rules for addition in **expr**\).
 The **array value** would just return the current contents of
 _var_\(_elem_\) if it exists, or _value_ otherwise.   If the
 _init_ parameter resolves to true \(as determined by
-_Tcl\_GetBooleanFromObj\(\)_ of course\), the variable is initialized to
+`Tcl_GetBooleanFromObj()` of course\), the variable is initialized to
 _value_ if it doesn't already exist.  The default for _value_ is
 the empty string, and the default for _init_ is false.
 
@@ -88,17 +88,17 @@ subcommands:
 
  * Wangnic notes:
 
-	 > **array value** _var elem_ **"" false** can be written as
-   **array get** _var elem_
+	 > \[**array value** _var elem_ **"" false**\] can be written as
+   \[**array get** _var elem_\]
 
-	 > Array get returns name/value pairs.  Array value returns just the
-   value.  Also if elem has a \* in it, there may be multiple matches.
+	 > **Array get** returns name/value pairs.  **Array value** returns just the
+   value.  Also if _elem_ has a `*` in it, there may be multiple matches.
 
  * Hobbs notes:
 
-	 > [[200]](200.md) already rejected _array values_
+	 > [TIP 200](200.md) already rejected **array values**
 
-	 > A single item is returned from _array value_, not a list, as
+	 > A single item is returned from **array value**, not a list, as
    there is no string match on elem.
 
 	 > The problem domain is not list processing \(which is expected to be
@@ -107,18 +107,17 @@ subcommands:
 
  * RHSeeger notes:
 
-	 > It would seem more consistant to push for the _incr_ command to
+	 > It would seem more consistant to push for the **incr** command to
    include a way to initialize a variable if it doesn't exist \(as per
-   [[215]](215.md) or the discussed options contained therein\), rather than add
+   [TIP 215](215.md) or the discussed options contained therein\), rather than add
    an incr subcommand to array.
 
-	 > Being a fan or reintroducing the _array values_ TIP \(since the
+	 > Being a fan or reintroducing the **array values** TIP \(since the
    core mailing list indicates it was never fully rejected\), I think
-   _array value_ might be a bit confusing, being only off by the
-   lack of plurality. \(I was one of the people pushing for [[200]](200.md)
+   **array value** might be a bit confusing, being only off by the
+   lack of plurality. \(I was one of the people pushing for [TIP 200](200.md)
    though, so take that aspect with a grain of salt\)
 
 # Copyright
 
 This document has been placed in the public domain.
-
