TIP #535 is now Final since implementation was merged in core-8-6-branch and trunk of Tk.

--- a/tip/535.md
+++ b/tip/535.md
@@ -1,6 +1,6 @@
 # TIP 535: Remove trailing zeroes in scale ticks
 	Author:         Francois Vogel <fvogelnew1@free.fr>
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Created:        10-March-2019
