Editorial tweaks: [chan pipe] exists

--- a/tip/240.md
+++ b/tip/240.md
@@ -23,7 +23,7 @@ This TIP is intended to overcome the following limitations of the existing
 
  1. While the stderr stream of a child process can be redirected to a file, it
     cannot be directed to a pipe and so cannot be captured progressively as
-    the process runs. [[202]](202.md) has partially addressed this issue but only for
+    the process runs. [TIP 202](202.md) has partially addressed this issue but only for
     the case where the child's stderr stream is directed to the same pipe as
     its stdout stream. Independent progressive capture of both stdout and
     stderr is still not possible.
@@ -34,14 +34,14 @@ This TIP is intended to overcome the following limitations of the existing
     the exit status without blocking until the process terminates.
 
  3. The existing **exec** and **open** commands impose a special
-    interpretation on the characters _<>\|&_. This causes two kinds of
+    interpretation on the characters `<>|&`. This causes two kinds of
     problems:
 
-	 > \* scripts wishing to invoke a command on a remote computer using an _rsh_
+	 > * scripts wishing to invoke a command on a remote computer using an _rsh_
      or similar command will sometimes wish to have characters such as
-     _<>\|&_ interpreted on the remote machine
+     `<>|&` interpreted on the remote machine
 
-	 > \* scripts may pass a user entered string as an argument to exec. Such
+	 > * scripts may pass a user entered string as an argument to exec. Such
      scripts may break unexpectedly if the comment string contains one of the
      special characters. Such problems could be considered a security weakness
      in Tcl.
@@ -62,8 +62,8 @@ and does not appear easy to transfer to the Tcl core. In addition, it is not
 clear to the author how **bgexec** could be extended to address items \(3\)
 and \(4\).
 
-A variety of other approaches to addressing these problems are listed on the
-Wiki <http://wiki.tcl.tk/1353> . This suggests that it may be difficult to
+A variety of other approaches to addressing these problems are listed [on the
+Wiki](https://wiki.tcl-lang.org/page/AlternativeToExec). This suggests that it may be difficult to
 achieve a consensus on what the ideal command\(s\) for launching processes
 should look like. This TIP provides a basis through which many of these
 approaches could be implemented in pure Tcl. The commands specified in this
@@ -92,16 +92,13 @@ subcommands.
      an empty string if the channel is to be disconnected in the child
      process\).
 
- 2. The sub-command **pipe** takes no arguments and returns a two element
-    list containing the input and output channels of the pipe in that order.
-
- 3. The sub-command **status** takes a single argument which is a process id
+ 2. The sub-command **status** takes a single argument which is a process id
     and returns a two element list. The first element is either _running_ or
     _completed_ The second element is the exit status of the process.
 
 	 > A process will report an arbitrary exit status of zero while it is running.
 
- 4. The sub-command **wait** is similar to **status** but blocks until the
+ 3. The sub-command **wait** is similar to **status** but blocks until the
     child process has completed.
 
 # Examples
@@ -148,7 +145,7 @@ implementation.
 	      	-onoutput {
 	      	   incr i
 	      	   set cmd [lindex $args $i]
-	      	   lassign [process pipe] parentChan outChan
+	      	   lassign [chan pipe] parentChan outChan
 	      	   fileevent $parentChan readable [list \
 	                  bgExecReadHandler $parentChan $cmd]
 	      	   set outCmd $cmd
@@ -158,7 +155,7 @@ implementation.
 	      	-onerror {
 	      	   incr i
 	      	   set cmd [lindex $args $i]
-	      	   lassign [process pipe] parentChan errChan
+	      	   lassign [chan pipe] parentChan errChan
 	      	   fileevent $parentChan readable [list \
 	                  bgExecReadHandler $parentChan $cmd]
 	      	}
@@ -273,7 +270,7 @@ implementation.
 
  1. For Windows, an important limitation that is not addressed by this TIP, is
     the lack of control over the console window settings when invoking a
-    process. This will require changes to _TclpCreateProcess_.
+    process. This will require changes to `TclpCreateProcess()`.
 
  2. A **kill** subcommand would be a useful addition to the **process**
     ensemble. On Windows, the ability to kill a child console process cleanly
@@ -282,20 +279,20 @@ implementation.
 
  3. A command to categorise an exit status obtained from **process status**
     or **process wait** along similar lines to the data placed in
-    _$errorCode_ by _TclCleanupChildren\(\)_.
+    _$errorCode_ by `TclCleanupChildrens()`.
 
  4. Some aspects of the existing **exec** command depend on use of temporary
     files. Since this TIP transfers the high level implementation of process
     launching into Tcl scripts, support for creation of uniquely named
-    temporary files, as proposed in [[210]](210.md), would be useful.
+    temporary files, as proposed in [TIP 210](210.md), would be useful.
 
  5. The wish console on Windows could be improved, using this mechanism, so
     that program names typed interactively will run in the background,
     allowing output to be seen before the process completes.
 
- 6. The ability to define _argv[[0]](0.md)_, independently from the program name,
+ 6. The ability to define `argv[0]`, independently from the program name,
     would occasionally be useful. For example, some UNIX shells run as login
-    shells when _argv[[0]](0.md)_ begins with a dash.
+    shells when `argv[0]` begins with a dash.
 
  7. Public C functions for invoking a process and creating a pipe wrapped in
     command channels.
@@ -321,8 +318,7 @@ implementation.
 
 # Reference Implementation
 
-Submitted as patch 1315115
-<https://sourceforge.net/support/tracker.php?aid=1315115> 
+Submitted as [patch 1315115](https://core.tcl-lang.org/tcl/tktview/1315115).
 
 # Copyright
 
