Editorial cleanup in 342

--- a/tip/342.md
+++ b/tip/342.md
@@ -13,7 +13,7 @@
 # Abstract
 
 A new subcommand of **dict** is proposed, which returns a dictionary value
-if it exists and returns a per-call default otherwise.
+if it exists, and a specified-per-call default otherwise.
 
 # Specification
 
@@ -67,7 +67,7 @@ getwithdefault**, it has the following disadvantages:
 
    * The "one **dict merge** early providing defaults for all keys" approach
      cannot deal with keys that have dynamic defaults, e.g. that the default
-     for option -foo is the effective value of option -bar.
+     for option `-foo` is the effective value of option `-bar`.
 
 Hence although **dict merge** is sometimes appropriate for providing
 defaults, it is not a universal solution.
@@ -83,26 +83,35 @@ existed. Problems with this approach are:
      its default **bar**\) is to be passed as an argument to the command
      **foo**, then the complete command is
 
-		     foo [if {[dict exists $D -apa]} then {dict get $D -apa}\
-		       else {return -level 0 bar}]
+		foo [if {[dict exists $D -apa]} then {dict get $D -apa}\
+		    else {return -level 0 bar}]
 
-	   > or 
+     or 
 
-		     foo [expr {[dict exists $D -apa] ? [dict get $D -apa] : "bar"}]
+		foo [expr {[dict exists $D -apa] ? [dict get $D -apa] : "bar"}]
 
-	   > which many programmers would find objectionable. The **dict
+     which many programmers would find objectionable. The **dict
      getwithdefault** counterpart is merely
 
-		     foo [dict getwithdefault $D -apa bar]
+		foo [dict getwithdefault $D -apa bar]
 
 The only way to avoid the redundance of an extra look-up seems to be to
 combine **dict get** with **catch**, like so:
 
-	  if {[catch {dict get $D -apa} value]} then {set value bar} else {set value}
+	if {[catch {dict get $D -apa} value]} then {foo bar} else {foo $value}
 
 but this has the disadvantage of hiding other sources of error, such as _D_
 not being a dictionary in the first place. This kind of error in a normal
 processing path is also considered poor style by some.
+
+An alternate version with **try** fixes that problem... but is ugly:
+
+	try {
+	    set value [dict get $D -apa]
+	} trap {TCL LOOKUP DICT} {} {
+	    set value bar
+	}
+	foo $value
 
 ## Implementation Choices
 
@@ -133,8 +142,7 @@ code needed to do it in the core.
 
 # Reference Implementation
 
-An implementation is provided on SF, in patch \#2370575.
-<https://sourceforge.net/support/tracker.php?aid=2370575> 
+An implementation is provided, in [patch #2370575](https://core.tcl-lang.org/tcl/tktview/2370575).
 
 # Copyright
 
