Update 224 to reflect changing opinions of what is valued, in preparation for voting

--- a/tip/342.md
+++ b/tip/342.md
@@ -7,7 +7,7 @@
 	Created:	27-Nov-2008
 	Keywords:	dictionary, default value
 	Post-History:	
-	Tcl-Ticket:     2370575
+	Tcl-Branch:     tip-342
 -----
 
 # Abstract
@@ -98,13 +98,17 @@ existed. Problems with this approach are:
 The only way to avoid the redundance of an extra look-up seems to be to
 combine **dict get** with **catch**, like so:
 
-	if {[catch {dict get $D -apa} value]} then {foo bar} else {foo $value}
+	if {[catch {dict get $D -apa} value]} then {
+	    foo bar
+	} else {
+	    foo $value
+	}
 
 but this has the disadvantage of hiding other sources of error, such as _D_
 not being a dictionary in the first place. This kind of error in a normal
 processing path is also considered poor style by some.
 
-An alternate version with **try** fixes that problem... but is ugly:
+An alternate version with **try** fixes some of the problems... but is ugly:
 
 	try {
 	    set value [dict get $D -apa]
