--- a/tip/224.md
+++ b/tip/224.md
@@ -11,67 +11,44 @@
 
 # Abstract
 
-The TIP proposes the addition to two new subcommands to the
-**array** command: **incr** and **value**.  The **incr**
-subcommand would increment an element in an array.  The **value**
-subcommand would query, reference, and/or initialize an array element.
+The TIP proposes the addition of a new subcommands to the **array**
+command: **value**.  The **value** subcommand would query, reference,
+and/or initialize an array element with more options for complexity
+than a simple read.
 
 # Rationale
 
 [TIP 215](215.md) proposed modifying the **incr** command to auto-initialize
-variables which do not exist, rather than throwing an error.  After
-some debate, it was identified that frequency counting in arrays was
-the primary area of interest.  In particular, the excessive use of
-`if`/`info exists` constructs in such code is inefficient, verbose and
-rather difficult to read.  The addition of these two subcommands could
-substantially reduce the complexity of much Tcl code.
+variables which do not exist, rather than throwing an error.  After some
+debate, it was identified that frequency counting in arrays was the primary
+area of interest.  In particular, the excessive use of `if`/`info exists`
+constructs in such code is inefficient, verbose and rather difficult to read.
+Though now we have **incr** doing automatic initialization, the addition of an
+extra subcommand could substantially reduce the complexity of much Tcl code.
 
 # Specification
 
-Two new subcommands will be added to **array**, being **incr** and
-**value**.
-Both commands take an array name (_var_) and an element name (_elem_) parameter; no string match is performed on _elem_.
-
-## array incr
-
- > **array incr** _var elem_ ?_value_? ?_init_?
-
-The **array incr** subcommand would increment _var_\(_elem_\), if
-it exists, by _value_, otherwise, initializes it to _init_.  The
-default for _value_ is 1, and the default for _init_ is 0.  The
-subcommand will return the new value and will support both integer and
-double values \(based on the rules for addition in **expr**\).
-
-## array value
+A new subcommand will be added to **array**, being **value**.
 
  > **array value** _var elem_ ?_value_? ?_init_?
 
-The **array value** would just return the current contents of
-_var_\(_elem_\) if it exists, or _value_ otherwise.   If the
-_init_ parameter resolves to true \(as determined by
-`Tcl_GetBooleanFromObj()` of course\), the variable is initialized to
-_value_ if it doesn't already exist.  The default for _value_ is
-the empty string, and the default for _init_ is false.
+The **array value** would just return the current contents of the element
+_elem_ of the array called _var_ if it exists, or _value_ otherwise.  If the
+_init_ parameter is provided and resolves to true \(as determined by
+`Tcl_GetBooleanFromObj()` of course\), the variable is initialized to _value_
+if it doesn't already exist.  The default for _value_ is the empty string, and
+the default for _init_ is false.
 
 # Reference Implementation
 
-Following is a Tcl only implementation of the **incr**/**value**
-subcommands:
+Following is an example Tcl-only implementation of the **value** subcommand:
 
 	proc Array {cmd var elem {amt {}} {init 0}} {
-	   # Implement the Array subcmds incr and value on var(elem):
-	   #  - incr   increment a variable by amt or initialize
-	   #           to init if undefined.
+	   # Implement the Array subcmd value on var(elem):
 	   #  - value  return the value if defined, else return amt
 	   #           initializing if init.
 	   upvar $var uvar
-	   if {[string match $cmd* incr]} {
-	      if {$amt == {}} { set amt 1 }
-	      if {[info exists uvar($elem)]} {
-	         return [set uvar($elem) [expr {$uvar($elem)+$amt}]]
-	      }
-	      return [set uvar($elem) $init]
-	   } elseif {[string match $cmd* value]} {
+	   if {[string match $cmd* value]} {
 	      if {[info exists uvar($elem)]} {
 	         return $uvar($elem)
 	      }
@@ -80,7 +57,7 @@ subcommands:
 	      }
 	      return $amt
 	   } else {
-	      error "usage: Array incr|value var elem ?amt? ?init?"
+	      error "usage: Array value var elem ?amt? ?init?"
 	   }
 	}
 
@@ -88,35 +65,44 @@ subcommands:
 
  * Wangnic notes:
 
-	 > \[**array value** _var elem_ **"" false**\] can be written as
-   \[**array get** _var elem_\]
+	\[**array value** _var elem_ **"" false**\] can be written as
+	\[**array get** _var elem_\]
 
-	 > **Array get** returns name/value pairs.  **Array value** returns just the
-   value.  Also if _elem_ has a `*` in it, there may be multiple matches.
+	**Array get** returns name/value pairs.  **Array value** returns just the
+	value.  Also if _elem_ has a `*` in it, there may be multiple matches.
 
  * Hobbs notes:
 
-	 > [TIP 200](200.md) already rejected **array values**
+	[TIP 200](200.md) already rejected **array values**
 
-	 > A single item is returned from **array value**, not a list, as
-   there is no string match on elem.
+	A single item is returned from **array value**, not a list, as
+	there is no string match on elem.
 
-	 > The problem domain is not list processing \(which is expected to be
-   relatively expensive\), but rather frequency counting and set
-   matching.
+	The problem domain is not list processing \(which is expected to be
+	relatively expensive\), but rather frequency counting and set
+	matching.
 
  * RHSeeger notes:
 
-	 > It would seem more consistant to push for the **incr** command to
-   include a way to initialize a variable if it doesn't exist \(as per
-   [TIP 215](215.md) or the discussed options contained therein\), rather than add
-   an incr subcommand to array.
+	It would seem more consistant to push for the **incr** command to
+	include a way to initialize a variable if it doesn't exist \(as per
+	[TIP 215](215.md) or the discussed options contained therein\), rather than add
+	an incr subcommand to array.
 
-	 > Being a fan or reintroducing the **array values** TIP \(since the
-   core mailing list indicates it was never fully rejected\), I think
-   **array value** might be a bit confusing, being only off by the
-   lack of plurality. \(I was one of the people pushing for [TIP 200](200.md)
-   though, so take that aspect with a grain of salt\)
+	Being a fan or reintroducing the **array values** TIP \(since the
+	core mailing list indicates it was never fully rejected\), I think
+	**array value** might be a bit confusing, being only off by the
+	lack of plurality. \(I was one of the people pushing for [TIP 200](200.md)
+	though, so take that aspect with a grain of salt\)
+
+ * dkf notes:
+ 
+    The **array incr** command was removed from this TIP, as its main use case
+    was addressed when [TIP 215](215.md) was accepted, and the measured
+    consensus was that the proposed extra command offered too little over
+    that. By comparison, **array value** is more useful and parallels [TIP
+    342](342.md) in terms of general high-level capabilities (though there are
+    syntactic differences).
 
 # Copyright
 
