Tweak to TIP 224 title

--- a/tip/224.md
+++ b/tip/224.md
@@ -1,6 +1,7 @@
-# TIP 224: Add New [array] Subcommands 'incr' and 'value'
+# TIP 224: Add New [array] Subcommand 'value'
 	Author:         Peter MacDonald <peter@pdqi.com>
 	Author:         Robert Seeger <rseeger00@aol.com>
+	Author:         Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
 	State:          Draft
 	Type:           Project
 	Vote:           Pending
@@ -11,7 +12,7 @@
 
 # Abstract
 
-The TIP proposes the addition of a new subcommands to the **array**
+The TIP proposes the addition of a new subcommand to the **array**
 command: **value**.  The **value** subcommand would query, reference,
 and/or initialize an array element with more options for complexity
 than a simple read.
