CFV called by DKF

--- a/tip/160.md
+++ b/tip/160.md
@@ -2,7 +2,7 @@
 	State:          Draft
 	Type:           Project
 	Tcl-Version:    8.7
-	Vote:           Pending
+	Vote:           In progress
 	Post-History:	
 	Author:         Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
 	Created:        17-Oct-2003
