--- a/tip/164.md
+++ b/tip/164.md
@@ -4,7 +4,7 @@
 	Author:         Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        17-Nov-2003
 	Post-History:   
 	Keywords:       Tk,canvas
