--- a/tip/342.md
+++ b/tip/342.md
@@ -2,7 +2,7 @@
 	Author:		Lars Hellström <Lars.Hellstrom@residenset.net>
 	State:		Draft
 	Type:		Project
-	Vote:		Pending
+	Vote:		In progress
 	Tcl-Version:	8.7
 	Created:	27-Nov-2008
 	Keywords:	dictionary, default value
