--- a/tip/507.md
+++ b/tip/507.md
@@ -2,7 +2,7 @@
 	Author:         René Zaumseil <r.zaumseil@freenet.de>
 	State:          Draft
 	Type:           Project
-	Vote:           
+	Vote:           In progress
 	Created:        9-May-2018
 	Post-History:   
 	Keywords:       Tk
