--- a/tip/224.md
+++ b/tip/224.md
@@ -4,7 +4,7 @@
 	Author:         Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        28-Sep-2004
 	Post-History:   
 	Tcl-Version:    8.7
