--- a/tip/312.md
+++ b/tip/312.md
@@ -3,7 +3,7 @@
 	Author:         Larry W. Virden <lvirden@yahoo.com>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        26-Jan-2008
 	Post-History:   
 	Keywords:       variable,trace
@@ -67,7 +67,8 @@ below:
 
 # Reference Implementation
 
-See <https://sourceforge.net/support/tracker.php?aid=1992824> .
+See [patch 1992842](https://sourceforge.net/support/tracker.php?aid=1992824).
+See [`tip-312-new` branch](https://core.tcl.tk/tcl/timeline?r=tip-312-new).
 
 # Notes
 
