--- a/tip/367.md
+++ b/tip/367.md
@@ -2,7 +2,7 @@
 	State:          Draft
 	Type:           Project
 	Tcl-Version:    8.7
-	Vote:           Pending
+	Vote:           In progress
 	Post-History:	
 	Author:         Donal K. Fellows <dkf@users.sf.net>
 	Created:        18-May-2010
