--- a/tip/504.md
+++ b/tip/504.md
@@ -2,7 +2,7 @@
 	Author:         Don Porter <dgp@users.sourceforge.net>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        21-Mar-2018
 	Obsoletes:	475
 	Post-History:   
