--- a/tip/537.md
+++ b/tip/537.md
@@ -16,7 +16,7 @@ This TIP proposes to modify "struct Tcl\_RegExpInfo" and "struct Tcl\_RegExpIndi
 
 # Rationale
 
-This TIP should have been part of TIP #502 (Index Value Reform) and/or TIP #494 (More use of size_t in Tcl 9), but it was overlooked. Without changing this public API, regulare expresion
+This TIP should have been part of TIP #502 (Index Value Reform) and/or TIP #494 (More use of size_t in Tcl 9), but it was overlooked. Without changing this public API, regular expression
 indexes never can exceed 2G in value.
 
 # Specification and Documentation
