Add example of how Tcl_CreateInterpWithStubs is used for TIP 531.

--- a/tip/531.md
+++ b/tip/531.md
@@ -63,9 +63,24 @@ Without this pointer there is no way to obtain extended error codes, but the tra
         return interp;
     }
 
+## Example use
+
+    #include <tcl.h>
+
+    main()
+    {
+        Tcl_Interp *interp = Tcl_CreateInterpWithStubs("8.7", 0);
+        if(interp) {
+            Tcl_Eval(interp, "puts [clock format [clock seconds]]");
+        } else {
+            fprintf(stderr, "Tcl_CreateInterpWithStubs failed\n");
+        }
+    }
+
+
 # Implementation
 
-Please refer to the `tip-???` branch of the core Tcl repository.
+Please refer to the `tip-531` branch of the core Tcl repository.
 
 # Backwards Compatibility
 
