Added impl link for 262

--- a/tip/262.md
+++ b/tip/262.md
@@ -8,6 +8,7 @@
 	Post-History:   
 	Keywords:       Tk,option
 	Tcl-Version:    8.7
+	Tk-Branch:      tip-262
 -----
 
 # Abstract
@@ -53,6 +54,10 @@ manipulated using the normal **configure** and **cget** methods:
    _boolean_ as false, the image will only be painted once, such
    that the center of the image painted is coincident with the center
    of the frame widget.
+
+# Implementation
+
+See the [tip-262 branch](https://core.tcl-lang.org/tk/timeline?r=tip-262).
 
 # Copyright
 
