Update 262 based on experience while writing the implementation

--- a/tip/262.md
+++ b/tip/262.md
@@ -13,7 +13,8 @@
 
 # Abstract
 
-This TIP proposes an option for frames that allows users to set the
+This TIP proposes an option for frames and toplevels (on the grounds
+that they're virtually the same thing internally) that allows users to set the
 background of the window to be an image.
 
 # Rationale
@@ -30,12 +31,12 @@ resize. The image would reside behind any other decoration or other
 widgets that resided in the frame. The image should be re-configurable
 to replace the image and/or remove it, as with a button image.
 
-This TIP should allow some rather classy looking tcl/tk programs to be
+This TIP should allow some rather classy looking Tcl/Tk programs to be
 created with much ease.
 
 # Proposed Change
 
-Two new options are proposed for **frame** widgets, to be
+Two new options are proposed for **frame** and **toplevel** widgets, to be
 manipulated using the normal **configure** and **cget** methods:
 
  * **-backgroundimage** _imageName_ - This gives the name of an
@@ -47,13 +48,16 @@ manipulated using the normal **configure** and **cget** methods:
 
  * **-tile** _boolean_ - If this option gives _boolean_ as true,
    the image will be painted such that the top-left corner corresponds
-   to the top-left corner of the frame, and then subsequently
+   to the top-left corner of the frame (inside any border), and then subsequently
    repeatedly painted \(with no gaps between the areas painted\) to the
    right and below that initial painting until such time as the entire
    widget is covered by copies of the image. If this option gives
    _boolean_ as false, the image will only be painted once, such
    that the center of the image painted is coincident with the center
-   of the frame widget.
+   of the frame widget. The default will be **false**.
+
+For convenience, an alias for **-backgroundimage** will also be
+provided: **-bgimg**
 
 # Implementation
 
